Menu results fix